# agent-sentinel

./: .gitignore  CLAUDE.md  CONVENTIONS.md  Cargo.toml  README.md  deny.toml  rust-toolchain.toml  tool-registry.json
.github/workflows/: ci.yml  nightly.yml  release.yml  security-audit.yml
config/: jira-task.toml
docs/plans/: 2026-04-10-rust-cli.md
docs/specs/: 2026-04-10-boundary-crossing-tests.md  2026-04-10-distribution-design.md  2026-04-20-camel-engine-design.md
docs/superpowers/plans/: 2026-04-13-symref-library.md
docs/superpowers/specs/: 2026-04-13-symref-library-design.md
hooks/: post-tool-use.sh  pre-tool-use.sh  session-end.sh  session-start.sh
patterns/: injection.txt
samples/github-issue-guard/: demo-attack-issue.md  demo-results.md  gh-mcp-auth.sh  tool-registry.json
samples/github-issue-guard/config/: github-issue.toml
samples/github-issue-guard/hooks/: post-tool-use.sh  pre-tool-use.sh  session-end.sh  session-start.sh
samples/github-issue-guard/patterns/: output-safety.txt
samples/github-issue-guard/profiles/: github-demo.json
samples/github-issue-guard/schemas/: github-issue.json
schemas/: jira-task.json
src/: claude.rs  main.rs  process.rs  registry.rs
src/hooks/: mod.rs  post_tool_use.rs  pre_tool_use.rs  session_end.rs  session_start.rs
tests/: boundary_test.rs  post_tool_use_test.rs  pre_tool_use_test.rs  session_end_test.rs  session_start_test.rs
tests/fixtures/: flc-success.json  jira-task-response.json  tool-registry.json
