[package]
name = "agent-sentinel"
version = "0.1.0"
edition = "2021"
description = "Security hook engine for the Dual LLM pattern in Claude Code plugins"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
