[package]
name = "agent-sentinel"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Security hook engine for the Dual LLM pattern in Claude Code plugins"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symref = { git = "https://github.com/mrizzi/symref.git", rev = "e953b1b" }
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
